# Text_box-of-mahoushoujo_no_majosaiban

./: .gitignore  build_onefile.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/: config.py  main.py
src/core/: image_processor.py
src/utils/: kitty_utils.py  platform_utils.py  resource_utils.py
tests/: test_imports.py
