[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "text-box-of-mahoushoujo-no-majosaiban"
version = "0.2.0"
description = "A tool to generate text boxes with Mahou Shoujo characters."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "oplivilqo"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Pillow>=10.0.0",
    "pyperclip>=1.8.2",
    "psutil>=5.9.0",
    "pilmoji>=2.0.0",
    "emoji>=1.7.0,<2.0.0",
    "keyboard>=0.13.5; sys_platform == 'win32'",
    "pywin32>=306; sys_platform == 'win32'",
    "pynput>=1.7.6; sys_platform != 'win32'",
    "pyclip>=0.7.0; sys_platform != 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "pyinstaller>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

